syntax = "proto3";

package o5.aws.deployer.v1.events;

import "google/protobuf/empty.proto";
import "o5/aws/deployer/v1/deployment.proto";
import "o5/aws/deployer/v1/environment.proto";
import "o5/aws/deployer/v1/stack.proto";
import "o5/messaging/v1/annotations.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_epb";

service DeployerEvents {
  option (o5.messaging.v1.config).unicast.name = "o5-deployer-events";
  rpc Deployment(DeploymentEvent) returns (google.protobuf.Empty) {}
  rpc Stack(StackEvent) returns (google.protobuf.Empty) {}
  rpc Environment(EnvironmentEvent) returns (google.protobuf.Empty) {}
}

message DeploymentEvent {
  o5.aws.deployer.v1.DeploymentEvent event = 1;
  o5.aws.deployer.v1.DeploymentStatus status = 2;
  o5.aws.deployer.v1.DeploymentStateData state = 3;
}

message StackEvent {
  o5.aws.deployer.v1.StackEvent event = 1;
  o5.aws.deployer.v1.StackStatus status = 2;
  o5.aws.deployer.v1.StackStateData state = 3;
}

message EnvironmentEvent {
  o5.aws.deployer.v1.EnvironmentEvent event = 1;
  o5.aws.deployer.v1.EnvironmentStatus status = 2;
  o5.aws.deployer.v1.EnvironmentStateData state = 3;
}
